--- a/index.tex
+++ b/index.tex
@@ -1,4 +1,4 @@
-% Created 2023-11-21 Tue 08:52
+% Created 2023-11-21 Tue 09:05
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,26 +29,26 @@
 
 
 \section{Chapter Charter}
-\label{sec:orgffef16f}
+\label{sec:org788067e}
 
 \subsection{Name}
-\label{sec:org5c78088}
+\label{sec:orgb81adbb}
 
 The name of this chapter shall be \textbf{\textbf{Mu Chapter}} of Eta Kappa Nu (HKN); hereafter referred to as the Chapter.
 On campus, the Chapter may be referred to as Mu Chapter of Eta Kappa Nu; Mu Chapter, Eta Kappa Nu; HKN; Eta Kappa Nu, Mu Chapter; or Eta Kappa Nu.
 
 \subsection{Location}
-\label{sec:orgf5a8f3b}
+\label{sec:org9c3bd1f}
 
 This chapter shall be located at the Berkeley campus of the University of California.
 
 \subsection{Founding Date}
-\label{sec:orgff0c235}
+\label{sec:orgc513396}
 
 Mu Chapter was founded on December 18th, 1915.
 
 \subsection{Mission Statement}
-\label{sec:org30d6889}
+\label{sec:org2a833d0}
 
 Eta Kappa Nu is the honor society comprised of Electrical Engineers and Computer Scientists.
 The mission of the Chapter is to recognize outstanding students, faculty, and professionals in IEEE technical fields of interest with a particular focus on the traditional fields of electrical engineering, computer engineering, and computer science.
@@ -57,7 +57,7 @@ Chapters further strive to foster community and cooperation among its active mem
 The Chapter also encourages members to engage with the local community through service and outreach programs.
 
 \subsection{Purpose}
-\label{sec:orga04b559}
+\label{sec:orga4ed161}
 
 The organization’s purpose are as follows:
 
@@ -71,14 +71,14 @@ The organization’s purpose are as follows:
 \end{enumerate}
 
 \subsection{Symbols and Logos of the Chapter}
-\label{sec:org5f61b46}
+\label{sec:orgf5ec833}
 
 The Chapter shall use the official symbols of IEEE-Eta Kappa Nu Chapter including the emblem, shield, and colors as detailed in the IEEE-Eta Kappa Nu Operations Manual.
 \section{Governance of the Chapter}
-\label{sec:orgbbe69eb}
+\label{sec:org2fe63cb}
 
 \subsection{Orders of Governance}
-\label{sec:org337b8aa}
+\label{sec:org1f577f6}
 
 This Constitution shall be the official guiding and governing document of Mu Chapter of Eta Kappa Nu and are subject to the Constitution and By-Laws of the Eta Kappa Nu Association and to future changes in those documents.
 The rules governing this organization for conducting business shall be, in order of precedence:
@@ -95,7 +95,7 @@ The most recent versions of these documents are available electronically from th
 IEEE-Eta Kappa Nu is an organizational unit of IEEE; policies of IEEE including the IEEE Code of Ethics are available at \url{https://ieee.org}.
 
 \subsection{Administrative and Voting Privileges}
-\label{sec:orgbb9c498}
+\label{sec:org11ef55e}
 
 For administrative and voting functions, the active members of the Chapter shall be those students and alumni who meet the following requirements (Alumni are exempt from the enrollment requirement but must meet all other criteria):
 
@@ -107,28 +107,28 @@ For administrative and voting functions, the active members of the Chapter shall
 \end{itemize}
 
 \subsection{Constitutional Amendments}
-\label{sec:org01ca69a}
+\label{sec:orgc76cdb7}
 
 Amendments to this Constitution requires a 2/3-majority vote of all active members of the Chapter, approval from any required university organizations, and approval by the IEEE-Eta Kappa Nu Board of Governors.
 Amendments may take effect immediately upon approval by the HKN Executive Council.
 Amendments rejected by the IEEE-Eta Kappa Nu Board of Governors shall be returned to the chapter and rendered void.
 \section{Office, Records, and Trustees}
-\label{sec:org5745698}
+\label{sec:org6c37bc2}
 
 \subsection{Records}
-\label{sec:org2861d49}
+\label{sec:org8cfc64f}
 
 The records of the chapter, which include chapter correspondence, membership signature book, financial records (including checkbooks), chapter meeting minutes and other records deemed important, shall be located at 345 Soda.
 
 \subsection{Trustees}
-\label{sec:orga466b2f}
+\label{sec:orgb5389dd}
 
 The trustee committee for the chapter shall consist of the EECS faculty at the University of California, Berkeley.
 The Faculty Advisor(s) of the chapter shall chair this committee.
 Upon the resignation of, or incapacity of said chair, the committee shall elect its chair from its membership.
 
 \subsection{Inactivity}
-\label{sec:org3da27b0}
+\label{sec:org16cbfcd}
 
 Should the chapter become inactive, the trustee committee shall:
 
@@ -138,98 +138,103 @@ Should the chapter become inactive, the trustee committee shall:
 \item Have full power, with the approval of the HKN Director, to reorganize and reactivate the chapter when he or she deems the time appropriate.
 \end{enumerate}
 \section{Membership}
-\label{sec:orge1f3cb2}
+\label{sec:orgfb20c56}
 
 Individuals are eligible for consideration for membership in the Mu chapter of Eta Kappa Nu if they are of unimpeachable character, have the ability to make use of the knowledge and information acquired, have the capacity and willingness for hard work, and have a genial nature and ability to work in harmony with all types of people – and meet the academic qualifications for membership as specified below.
 Only currently registered students, faculty, and staff may be active members in a registered student organization.
 Only active members may vote or hold office.
 
 \subsection{Juniors}
-\label{sec:orgc7bb8c4}
+\label{sec:orgf4a4f23}
 
 Any enrolled student who has junior standing for the bachelor’s degree in electrical engineering or computer science, and has a cumulative ranking in the upper quarter of their class as determined by the College of Engineering.
 
 \subsection{Seniors}
-\label{sec:org8901a76}
+\label{sec:orga06ef02}
 
 Any enrolled student who has senior standing for the bachelor’s degree in electrical engineering or computer science, and has a cumulative ranking in the upper third of their class as determined by the College of Engineering.
 
 \subsection{Graduate Students}
-\label{sec:org77b8615}
+\label{sec:org2386a8e}
 
 Any student currently enrolled in a program of study leading to a masters or doctoral degree in EECS and has completed one full academic term at the University of California, Berkeley.
 
 \subsection{Faculty}
-\label{sec:org6e67439}
+\label{sec:org998534c}
 
 All faculty members shall be eligible for membership by virtue of their faculty position.
 
 \subsection{Professional Member}
-\label{sec:org36d6ae7}
+\label{sec:orgd4238a9}
 
 Any electrical or computer engineer who has done significant meritorious work in the electrical engineering or computer science profession or allied pursuits.
 Professional members may not vote or hold office.
 
 \subsection{Additional Approval}
-\label{sec:org8e76fec}
+\label{sec:orgf1b401d}
 
 who are graduate students, faculty members, or professionals must have the written approval and endorsement of the chapter faculty advisor and the head of the EECS department.
 
 \subsection{Miscellaneous}
-\label{sec:org70cfe80}
+\label{sec:org2b97b5d}
 
 We will not haze according to California State Law.
+
 We will not restrict membership based upon race, color, national origin, religion, sex, gender identity, pregnancy (including pregnancy, childbirth, and medical conditions related to pregnancy or childbirth), physical or mental disability, medical condition (cancer related or genetic characteristics), ancestry, marital status, age, sexual orientation, citizenship, or service in the uniformed services (including membership, application for membership, performance of service, application for service, or obligation for service in the uniformed services.
+
+This organization agrees to adhere to the guidelines described in the \href{https://docs.google.com/document/d/1ex7Won3HvV1lCDYtMSUIkHWaRrl-u0Biu8dMjPdKtIs/edit}{RSO Sexual Violence and Sexual Harassment (SVSH) Prevention and Response Policy} which aligns with the \href{https://policy.ucop.edu/doc/4000385/SVSH}{University of California’s Sexual Violence and Sexual Harassment Policy}.
+This RSO agrees to send at least one representative to participate in a Path to Care training annually.
+RSO will also follow the SVSH prevention and response guidelines if and when SVSH harm occurs within the organization.
 \section{Officers}
-\label{sec:orgdb594ba}
+\label{sec:orgcbe05f2}
 
 \subsection{Terms of Service}
-\label{sec:orgb14503e}
+\label{sec:orgaf37405}
 
 Chapter officers shall be elected once every academic semester.
 All newly elected officers shall take office at the conclusion of the last chapter meeting for the semester.
 All outgoing officers shall transfer their files and explain the duties of the office to the incoming officers at or before the last meeting of the semester.
 
 \subsection{Election Date}
-\label{sec:orgecc0aa5}
+\label{sec:orgc3174a6}
 
 Elections are to be held during or near the last three weeks of the semester as determined by the Executive Committee.
 
 \subsection{Officer Positions}
-\label{sec:org13a76c9}
+\label{sec:org05d5348}
 
 The officer positions shall be determined each semester at the end of semester forum with quorum.
 Any officer may suggest a change in the position, but must be seconded by a current standing relevant officer or knowledgable executive member.
 The officer corp is able to add, remove, or alter any committee or adjust the committee size with a majority vote.
 
 \subsection{Vacancies}
-\label{sec:orgd60b671}
+\label{sec:org7a962a1}
 
 If the active membership of the chapter is insufficient to fill existing positions, any two offices may be combined, or one individual may be elected to two offices.
 In addition to the specific duties listed below, each officer must perform any additional duties as delegated by the President.
 \section{Executive Council}
-\label{sec:org39363bd}
+\label{sec:orgd9ecd00}
 
 \subsection{Order of Election}
-\label{sec:orgda9be6b}
+\label{sec:org3a84472}
 
 The executive council consists of the President, Vice President, Treasurer, Recording Secretary, Corresponding Secretary, Department Relations, and Alumni Relations. Other officers may be elected to meet the Chapter’s needs.
 
 \subsection{Order of Succession}
-\label{sec:org365b4b5}
+\label{sec:org532b284}
 
 The order of succession will be President, Vice President, Recording Secretary, Corresponding Secretary, Treasurer, Department Relations, and Alumni Relations.
 Other elected positions will be set by the discretion of the incumbent executive council.
 The officer immediately below the vacant office shall assume the duties of both offices until a replacement can be elected.
 
 \subsection{Eligibility}
-\label{sec:org722c3bb}
+\label{sec:org618e312}
 
 Candidates for the executive offices must have served as an officer in the organization, unless no former officers are able and willing to fill this position.
 Any vacancy in the offices of the Chapter shall be filled at the first regular meeting after the vacancy occurs, and when possible, before the vacancy occurs.
 
 \subsection{Power Oversight}
-\label{sec:org28692b2}
+\label{sec:org9e4fe34}
 
 The President shall oversee the operations of the entirety of HKN.
 
@@ -246,29 +251,29 @@ The Department Relations Officer shall oversee the relations between the chapter
 The Alumni Relations Officer shall oversee the relations between the chapter and alumni.
 
 \subsection{Other Positions}
-\label{sec:org438f93d}
+\label{sec:org93f61c0}
 
 As needed before elections, the Executive Committee may create or destroy other officer positions and shift duties correspondingly.
 
 \subsection{Governance}
-\label{sec:orgab0b965}
+\label{sec:org7c475ec}
 
 The Executive Committee shall have the power to make decisions affecting the day-to-day operation of the chapter between regularly scheduled meetings.
 The Executive Committee shall serve as a planning committee for activities throughout the semester and shall propose the initial agenda for all meetings.
 
 \subsection{Quorum and Attendance}
-\label{sec:org7127e60}
+\label{sec:org52d0fd1}
 
 A quorum for transaction of business at an Executive Meeting shall be a two-thirds majority.
 Executive committee meetings shall be open to all officers and members who wish to attend.
 The Faculty Advisor(s) is invited to all Executive Meetings, but is not required to attend.
 
 \subsection{Overturning Decisions}
-\label{sec:org0cf1c6b}
+\label{sec:org21c8d68}
 
 Decisions of the Executive Committee may be overturned by a two-thirds majority vote of the active members of the chapter.
 \section{Faculty Advisors}
-\label{sec:orgdc205e1}
+\label{sec:org3c688c1}
 
 Mu Chapter shall have at least one Faculty Advisor who shall serve as liaison between the chapter and the college.
 Their role shall be as follows:
@@ -279,72 +284,129 @@ Their role shall be as follows:
 \item The Faculty Advisor(s) shall help guide the officers and the chapter.
 \end{enumerate}
 \section{Meetings}
-\label{sec:orgae8d606}
+\label{sec:org834d045}
 
 \subsection{Quorum}
-\label{sec:orgc4c9997}
+\label{sec:orgc12214d}
 
 A quorum for the legal transaction of chapter business shall consist of at least one-half of the active members of the chapter.
 
 \subsection{General Meetings}
-\label{sec:orgb1f45fe}
+\label{sec:orgab3daea}
 
 The purpose of general meetings is to disseminate recent and upcoming events to the membership at large.
 
 \subsection{Regular Meetings}
-\label{sec:orge3238b0}
+\label{sec:org876ad6a}
 
 The purpose of regular meetings is to keep those interested in and responsible updated about the day-to-day business of the chapter.
 
 \subsection{Executive Meetings}
-\label{sec:orgfca45a0}
+\label{sec:orgd0a3936}
 
 The purpose of executive meetings is to discuss higher-level plans and business of the chapter.
 
 \subsection{Special Meetings}
-\label{sec:orgd8d8dd0}
+\label{sec:org26eb503}
 
 The purpose of special meetings is as a designated catch all for discussions that do not fit in the regular schedule of any other meeting.
 \section{Dues, Fees, and Assessments}
-\label{sec:org9e507d0}
+\label{sec:org5978e2c}
 
 \subsection{National Induction Fee}
-\label{sec:org77bb3e7}
+\label{sec:org2963512}
 
 The national induction fee shall be determined by the current By-Laws of the Eta Kappa Nu Association.
 
 \subsection{Local Induction Fee}
-\label{sec:org4020a1c}
+\label{sec:org9d053aa}
 
 The local induction fee shall be established by the Executive Committee, and shall not exceed the amount of the HKN national induction fee.
 
 \subsection{Waiver}
-\label{sec:org08a7fb0}
+\label{sec:org7d0ecb5}
 
 The Executive Committee may, at their discretion, waive an individual’s local and/or national fees with just cause.
 Such cause is at the sole discretion of the committee. In such cases, the Treasurer shall be instructed to pay the fees from chapter funds.
 \section{Funds}
-\label{sec:org0c46bce}
+\label{sec:orgfa1ed48}
 
 There shall be a General Fund consisting of local chapter dues, fees, assessments, bank interest, and proceeds collected from other chapter activities.
 The general fund shall be used to pay all operating expenses of the chapter.
 The Treasurer shall establish and administer the General Fund and all accounts.
 The Treasurer shall have the authority to open accounts and to deposit funds.
 \section{ASUC Sponsorship, Funding, and Space}
-\label{sec:org24df472}
+\label{sec:org7b1bb3c}
 
 This organization hereby wishes to seek ASUC sponsorship.
-This organization adopts and incorporates by reference Schedule A of ASUC Bylaw 2201,  and the same as may be amended from time to time, completely and fully as part of this Constitution.
+This organization adopts and incorporates by reference Schedule A of ASUC Bylaw 2201, and the same as may be amended from time by time, completely and fully as part of this [constitution, charter, articles, etc].
 This organization cannot amend this clause unless and until the ASUC has certified that this organization has ceased to be ASUC-sponsored, all ASUC property has been returned to the ASUC, access to all ASUC resources and facilities has been relinquished, and any debts, liabilities, or other responsibilities to the ASUC have been resolved.
 This organization will continue to be bound by any provisions specified in Schedule A for actions it took while this clause was in effect, even if this clause is amended.
+
+\subsection{Schedule A}
+\label{sec:orgff67f91}
+
+1 This organization is organized and operated exclusively for nonprofit purposes.
+The property of this organization is irrevocably dedicated to the purposes specified in its primary governing document and no part of the net income or assets of this organization shall ever inure to the benefit of any director, officer, or member thereof or to the benefit of any private person.
+
+2 This organization recognizes that current or past ASUC sponsorship or funding does not imply a guarantee of continued or future sponsorship or funding and that status as a university registered student organization does not guarantee status as an ASUC-sponsored student organization or ASUC funding.
+
+3 The ultimate constitutional, budgetary, and policy making authority of this organization shall be vested entirely and exclusively in ASUC members, at least a majority of whom shall be undergraduate students.
+Only ASUC members may hold officer positions in this organization.
+This section shall not be interpreted to prevent non-ASUC members from holding advisory positions in the organization.
+
+4 This organization is not a unit of the ASUC or of the University of California.
+Unless otherwise specified in its primary governing document, this organization shall be considered an unincorporated association organized under the laws of California.
+
+5 All funds, facilities, and resources allocated or provided to this organization by the ASUC (including the Graduate Assembly) during the term of its sponsorship shall remain the property of the ASUC at all times.
+If the organization ceases to be sponsored or ceases to exist, all ASUC property and unspent funds shall be immediately returned to the ASUC (including the Graduate Assembly).
+
+5.1 Any property [\#\# other long term property / subscriptions] purchased by this organization using funds provided to it by the ASUC (including the Graduate Assembly) shall be the property of the ASUC.
+The ASUC shall retain ownership proportional to its contribution in any property purchased partially with ASUC funds.
+
+6 This organization may use funds, facilities, and resources allocated or provided to it by the ASUC (including the Graduate Assembly) only for purposes which promote the general welfare of the student body and which are not inconsistent with the meaning of United States Internal Revenue Code section 501(c)(3).
+
+6.1 Funds, facilities, and resources allocated or provided to this organization by the ASUC (including the Graduate Assembly) shall not be used to participate or intervene in any political campaign (including the publishing or distribution of statements) on behalf of any candidate for public office or for activities which primarily consist of carrying on propaganda, or otherwise attempting to influence legislation.
+
+7 This organization shall follow all regulations found in the ASUC Constitution and Bylaws during the term of ASUC sponsorship.
+
+8 All disputes involving this organization may be resolved by mandatory binding arbitration through the ASUC Judicial Council.
+
+8.1 The ASUC Judicial Council shall operate in accordance with the ASUC Constitution and the Judicial Council Rules of Procedure.
+
+8.2 The ASUC Judicial Council shall have the power to order any remedy it sees fit.
+Mandatory binding arbitration may be initiated against the organization by:
+
+8.2.1 Any member of this organization
+
+8.2.2 Any member of the ASUC
+
+8.2.3 Another ASUC-sponsored organization, the ASUC, or any unit of the ASUC
+
+8.2.4 A unit of the University of California, with the consent of the ASUC Judicial Council
+
+8.2.5 Any other person or entity, with the consent of this organization and the ASUC Judicial Council.
+
+9 This organization shall defend, indemnify and hold the ASUC, its officers, officials, employees and volunteers harmless from any and all claims, injuries, damages, losses or suits including attorney fees, arising out of or resulting from the acts, errors or omissions of this organization in relation to its relationship with the ASUC, except for injuries and damages caused by the sole negligence of the ASUC.
+
+10 All officers and authorized representatives of this organization are individually and jointly responsible for the financial obligations of the organization to the ASUC, incurred by this organization during the tenure of the officer or authorized representative.
+This shall include any damage or defacement of ASUC property.
+
+11 All books and records of this organization shall be subject to inspection by the ASUC Judicial Council, ASUC Chief Financial Office, ASUC Chief Legal Officer, and ASUC professional legal counsel.
+These individuals may make copies and extracts of such records.
+
+12 Upon the dissolution or winding up of this organization, its assets remaining after payment, or provision for payment, of all debts and liabilities shall be distributed to the ASUC, unless the primary governing document of the organization has specified some other nonprofit fund, foundation or corporation, which is organized and operated exclusively for charitable or educational purposes, to receive such funds.
+In the event that the designated organization no longer exists or has ceased to be a non-profit organization, the distribution shall be made to the ASUC.
+
+14 This organization shall be considered dissolved if it is inactive and (a) fails to register as a student organization with the University for more than five full academic years or (b) it ceases to have any members.
+The ASUC shall have the authority to wind-up the affairs of this organization in such case, but shall not assume any responsibility for any debts or liabilities of this organization.
 \section{Amendments}
-\label{sec:org3f8ce15}
+\label{sec:org133bde7}
 
 \subsection{Ratification}
-\label{sec:org4e9391f}
+\label{sec:org61a5824}
 
 Amendment of these chapter Constitution must be approved by a unanimous vote of all active members present at regular meetings or by a two-thirds majority vote of all active members present at general meetings.
-All amendments, additions or deletions to this document must be filed with the LEAD Center at \href{mailto:lead@berkeley.edu}{lead@berkeley.edu}, or LEAD Center at 432 Eshleman Hall.
 The amended Chapter Constitution will become effective upon:
 
 \begin{enumerate}
@@ -356,21 +418,20 @@ The amended Chapter Constitution will become effective upon:
 All amendments, additions or deletions to this document must be filed with the LEAD Center in 432 Eshleman Hall.
 
 \subsection{Student Activities and Services}
-\label{sec:orge9cfad9}
+\label{sec:orgc768707}
 
 If this organization is a registered student group with the Student Activities and Services (102 Hearst Gym), no amendment may conflict with University of California regulations pertaining to registered student groups, and the Student Activities and Services must have an up to date copy of this document at all times.
 
 \subsection{Associated Students of the University of California}
-\label{sec:org65ec629}
+\label{sec:orgb2d355d}
 
 If this organization receives sponsorship or funding from the Associated Students of the University of California, no amendment may conflict with Associated Students of the University of California regulations pertaining to sponsored or funded student groups, and the Office of Student Affairs of the Associated Students of the University of California must have an up to date copy of this document at all times.
 \section{Dissolution}
-\label{sec:orgf3fc3e2}
+\label{sec:org84ef454}
 
 The property of this chapter is irrevocably dedicated to charitable purposes and no part of the net income or assets of this chapter shall ever inure to the benefit of any officer or member thereof or to the benefit of any private person, or any organization not 501(c)(3) qualified by the IRS.
 Upon dissolution of the chapter, any assets remaining after payment, or provision of payment, of all debts and liabilities of the organization shall be returned to Eta Kappa Nu headquarters, which is organized and operated exclusively for charitable purposes and has established its tax exempt status under section 501(c)(3) of the Internal Revenue Code.
 
 If the organization is ASUC or GA Sponsored, all unspent ASUC funds shall return to the ASUC; all Graduate Assembly funds shall return to the Graduate Assembly.
 If the organization is defunct for five (5) or more years, any privately obtained funds (including any funds left in miscellaneous accounts) shall be donated to the ASUC.
-In the event that the designated nonprofit organization no longer exists or has ceased to be a nonprofit, then the unspent funds shall be donated to the ASUC.
 \end{document}
