--- a/index.org
+++ b/index.org
@@ -1,7 +1,7 @@
 #+title: Constitution
 #+author: Mu Chapter of Eta Kappa Nu
-# address: Eta Kappa Nu, 290 Cory Hall, Berkeley, CA 94720
-# date: 2023-07-29
+#+address: Eta Kappa Nu, 290 Cory Hall, Berkeley, CA 94720
+#+date: 2023-07-29
 
 #+include: "./articles/01-chapter-charter.org"
 #+include: "./articles/02-governance.org"
