Update outdated LEAD center clause to new OASIS clause

--- a/articles/12-amendments.org
+++ b/articles/12-amendments.org
@@ -9,7 +9,7 @@ The amended Chapter Constitution will become effective upon:
 2. Receipt of approval from any required university organization.
 3. Approval by the HKN Executive Council.
 
-All amendments, additions or deletions to this document must be filed with the LEAD Center in 432 Eshleman Hall.
+All amendments, additions or deletions to this document must be filed with the OASIS Center at [[mailto:oasis.center@berkeley.edu][oasis.center@berkeley.edu]], or OASIS Center at 312 Eshleman Hall.
 
 ** Student Activities and Services
 
