--- a/index.tex
+++ b/index.tex
@@ -1,4 +1,4 @@
-% Created 2024-05-20 Mon 16:46
+% Created 2024-07-24 Wed 11:03
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -20,7 +20,7 @@
  pdftitle={Constitution},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.3 (Org mode 9.6.24)}, 
+ pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
  pdflang={English}}
 \begin{document}
 
@@ -29,26 +29,26 @@
 
 
 \section{Chapter Charter}
-\label{sec:orgc11a0d1}
+\label{sec:org6c86196}
 
 \subsection{Name}
-\label{sec:org26e0e74}
+\label{sec:orgca336af}
 
 The name of this chapter shall be \textbf{\textbf{Mu Chapter}} of Eta Kappa Nu (HKN); hereafter referred to as the Chapter.
 On campus, the Chapter may be referred to as Mu Chapter of Eta Kappa Nu; Mu Chapter, Eta Kappa Nu; HKN; Eta Kappa Nu, Mu Chapter; or Eta Kappa Nu.
 
 \subsection{Location}
-\label{sec:org5a5ce86}
+\label{sec:orgdb6ed2b}
 
 This chapter shall be located at the Berkeley campus of the University of California.
 
 \subsection{Founding Date}
-\label{sec:orgff75e4e}
+\label{sec:org3d02517}
 
 Mu Chapter was founded on December 18th, 1915.
 
 \subsection{Mission Statement}
-\label{sec:org848ac28}
+\label{sec:orgce28a3d}
 
 Eta Kappa Nu is the honor society comprised of Electrical Engineers and Computer Scientists.
 The mission of the Chapter is to recognize outstanding students, faculty, and professionals in IEEE technical fields of interest with a particular focus on the traditional fields of electrical engineering, computer engineering, and computer science.
@@ -57,7 +57,7 @@ Chapters further strive to foster community and cooperation among its active mem
 The Chapter also encourages members to engage with the local community through service and outreach programs.
 
 \subsection{Purpose}
-\label{sec:orgeed0667}
+\label{sec:org073994d}
 
 The organization’s purpose are as follows:
 
@@ -71,14 +71,14 @@ The organization’s purpose are as follows:
 \end{enumerate}
 
 \subsection{Symbols and Logos of the Chapter}
-\label{sec:orgbd2630a}
+\label{sec:orgc5cd89e}
 
 The Chapter shall use the official symbols of IEEE-Eta Kappa Nu Chapter including the emblem, shield, and colors as detailed in the IEEE-Eta Kappa Nu Operations Manual.
 \section{Governance of the Chapter}
-\label{sec:orga0bb327}
+\label{sec:org654f5db}
 
 \subsection{Orders of Governance}
-\label{sec:orga1ffb27}
+\label{sec:orgd38efb6}
 
 This Constitution shall be the official guiding and governing document of Mu Chapter of Eta Kappa Nu and are subject to the Constitution and By-Laws of the Eta Kappa Nu Association and to future changes in those documents.
 The rules governing this organization for conducting business shall be, in order of precedence:
@@ -95,7 +95,7 @@ The most recent versions of these documents are available electronically from th
 IEEE-Eta Kappa Nu is an organizational unit of IEEE; policies of IEEE including the IEEE Code of Ethics are available at \url{https://ieee.org}.
 
 \subsection{Administrative and Voting Privileges}
-\label{sec:orgc5c4cf6}
+\label{sec:orge8213dd}
 
 For administrative and voting functions, the active members of the Chapter shall be those students and alumni who meet the following requirements (Alumni are exempt from the enrollment requirement but must meet all other criteria):
 
@@ -107,28 +107,28 @@ For administrative and voting functions, the active members of the Chapter shall
 \end{itemize}
 
 \subsection{Constitutional Amendments}
-\label{sec:org3f776ea}
+\label{sec:org8fca992}
 
 Amendments to this Constitution requires a 2/3-majority vote of all active members of the Chapter, approval from any required university organizations, and approval by the IEEE-Eta Kappa Nu Board of Governors.
 Amendments may take effect immediately upon approval by the HKN Executive Council.
 Amendments rejected by the IEEE-Eta Kappa Nu Board of Governors shall be returned to the chapter and rendered void.
 \section{Office, Records, and Trustees}
-\label{sec:orga53608a}
+\label{sec:org0ffe134}
 
 \subsection{Records}
-\label{sec:orga1d5631}
+\label{sec:org8e3fca2}
 
 The records of the chapter, which include chapter correspondence, membership signature book, financial records (including checkbooks), chapter meeting minutes and other records deemed important, shall be located at 345 Soda.
 
 \subsection{Trustees}
-\label{sec:org291ac37}
+\label{sec:org3b94984}
 
 The trustee committee for the chapter shall consist of the EECS faculty at the University of California, Berkeley.
 The Faculty Advisor(s) of the chapter shall chair this committee.
 Upon the resignation of, or incapacity of said chair, the committee shall elect its chair from its membership.
 
 \subsection{Inactivity}
-\label{sec:org3f547ec}
+\label{sec:org519b19e}
 
 Should the chapter become inactive, the trustee committee shall:
 
@@ -138,45 +138,45 @@ Should the chapter become inactive, the trustee committee shall:
 \item Have full power, with the approval of the HKN Director, to reorganize and reactivate the chapter when he or she deems the time appropriate.
 \end{enumerate}
 \section{Membership}
-\label{sec:org7eae466}
+\label{sec:org4194f0d}
 
 Individuals are eligible for consideration for membership in the Mu chapter of Eta Kappa Nu if they are of unimpeachable character, have the ability to make use of the knowledge and information acquired, have the capacity and willingness for hard work, and have a genial nature and ability to work in harmony with all types of people – and meet the academic qualifications for membership as specified below.
 Only currently registered students, faculty, and staff may be active members in a registered student organization.
 Only active members may vote or hold office.
 
 \subsection{Juniors}
-\label{sec:org53e3294}
+\label{sec:orgb88b73c}
 
 Any enrolled student who has junior standing for the bachelor’s degree in electrical engineering or computer science, and has a cumulative ranking in the upper quarter of their class as determined by the College of Engineering.
 
 \subsection{Seniors}
-\label{sec:org01d2075}
+\label{sec:orgbdf1657}
 
 Any enrolled student who has senior standing for the bachelor’s degree in electrical engineering or computer science, and has a cumulative ranking in the upper third of their class as determined by the College of Engineering.
 
 \subsection{Graduate Students}
-\label{sec:orgf9c4700}
+\label{sec:orgb4e0ba9}
 
 Any student currently enrolled in a program of study leading to a masters or doctoral degree in EECS and has completed one full academic term at the University of California, Berkeley.
 
 \subsection{Faculty}
-\label{sec:org300c9a7}
+\label{sec:org0214fbd}
 
 All faculty members shall be eligible for membership by virtue of their faculty position.
 
 \subsection{Professional Member}
-\label{sec:orgdba0a30}
+\label{sec:org869791f}
 
 Any electrical or computer engineer who has done significant meritorious work in the electrical engineering or computer science profession or allied pursuits.
 Professional members may not vote or hold office.
 
 \subsection{Additional Approval}
-\label{sec:org4921ede}
+\label{sec:orge98ba56}
 
 who are graduate students, faculty members, or professionals must have the written approval and endorsement of the chapter faculty advisor and the head of the EECS department.
 
 \subsection{Miscellaneous}
-\label{sec:org89105c7}
+\label{sec:orgfde6cac}
 
 We will not haze according to California State Law.
 
@@ -186,55 +186,55 @@ This organization agrees to adhere to the guidelines described in the \href{http
 This RSO agrees to send at least one representative to participate in a Path to Care training annually.
 RSO will also follow the SVSH prevention and response guidelines if and when SVSH harm occurs within the organization.
 \section{Officers}
-\label{sec:orgb2f5f55}
+\label{sec:org78e4264}
 
 \subsection{Terms of Service}
-\label{sec:orgaf833ab}
+\label{sec:orgea30243}
 
 Chapter officers shall be elected once every academic semester.
 All newly elected officers shall take office at the conclusion of the last chapter meeting for the semester.
 All outgoing officers shall transfer their files and explain the duties of the office to the incoming officers at or before the last meeting of the semester.
 
 \subsection{Election Date}
-\label{sec:orgbf3575f}
+\label{sec:orgbaeaf4c}
 
 Elections are to be held during or near the last three weeks of the semester as determined by the Executive Committee.
 
 \subsection{Officer Positions}
-\label{sec:org5275a82}
+\label{sec:orgb35f0df}
 
 The officer positions shall be determined each semester at the end of semester forum with quorum.
 Any officer may suggest a change in the position, but must be seconded by a current standing relevant officer or knowledgable executive member.
 The officer corp is able to add, remove, or alter any committee or adjust the committee size with a majority vote.
 
 \subsection{Vacancies}
-\label{sec:org571e125}
+\label{sec:org868ca76}
 
 If the active membership of the chapter is insufficient to fill existing positions, any two offices may be combined, or one individual may be elected to two offices.
 In addition to the specific duties listed below, each officer must perform any additional duties as delegated by the President.
 \section{Executive Council}
-\label{sec:org8c3d893}
+\label{sec:org2944ca3}
 
 \subsection{Order of Election}
-\label{sec:org19be484}
+\label{sec:orgb6219f2}
 
 The executive council consists of the President, Vice President, Treasurer, Recording Secretary, Corresponding Secretary, Department Relations, and Alumni Relations. Other officers may be elected to meet the Chapter’s needs.
 
 \subsection{Order of Succession}
-\label{sec:orgb3c552c}
+\label{sec:org643cfef}
 
 The order of succession will be President, Vice President, Recording Secretary, Corresponding Secretary, Treasurer, Department Relations, and Alumni Relations.
 Other elected positions will be set by the discretion of the incumbent executive council.
 The officer immediately below the vacant office shall assume the duties of both offices until a replacement can be elected.
 
 \subsection{Eligibility}
-\label{sec:orgeb02acc}
+\label{sec:org1fc64c9}
 
 Candidates for the executive offices must have served as an officer in the organization, unless no former officers are able and willing to fill this position.
 Any vacancy in the offices of the Chapter shall be filled at the first regular meeting after the vacancy occurs, and when possible, before the vacancy occurs.
 
 \subsection{Power Oversight}
-\label{sec:org8926d24}
+\label{sec:orgcbe4f45}
 
 The President shall oversee the operations of the entirety of HKN.
 
@@ -251,29 +251,29 @@ The Department Relations Officer shall oversee the relations between the chapter
 The Alumni Relations Officer shall oversee the relations between the chapter and alumni.
 
 \subsection{Other Positions}
-\label{sec:org4e5e1d5}
+\label{sec:org1ddb3c2}
 
 As needed before elections, the Executive Committee may create or destroy other officer positions and shift duties correspondingly.
 
 \subsection{Governance}
-\label{sec:orgf09f5d4}
+\label{sec:org217bf6f}
 
 The Executive Committee shall have the power to make decisions affecting the day-to-day operation of the chapter between regularly scheduled meetings.
 The Executive Committee shall serve as a planning committee for activities throughout the semester and shall propose the initial agenda for all meetings.
 
 \subsection{Quorum and Attendance}
-\label{sec:org4574f14}
+\label{sec:orga7d4b90}
 
 A quorum for transaction of business at an Executive Meeting shall be a two-thirds majority.
 Executive committee meetings shall be open to all officers and members who wish to attend.
 The Faculty Advisor(s) is invited to all Executive Meetings, but is not required to attend.
 
 \subsection{Overturning Decisions}
-\label{sec:orgfc95d4b}
+\label{sec:org332e044}
 
 Decisions of the Executive Committee may be overturned by a two-thirds majority vote of the active members of the chapter.
 \section{Faculty Advisors}
-\label{sec:orgf65a8f1}
+\label{sec:org73c85df}
 
 Mu Chapter shall have at least one Faculty Advisor who shall serve as liaison between the chapter and the college.
 Their role shall be as follows:
@@ -284,59 +284,59 @@ Their role shall be as follows:
 \item The Faculty Advisor(s) shall help guide the officers and the chapter.
 \end{enumerate}
 \section{Meetings}
-\label{sec:org1f51ac6}
+\label{sec:org614a0b7}
 
 \subsection{Quorum}
-\label{sec:org4634b1d}
+\label{sec:org9b6eb4a}
 
 A quorum for the legal transaction of chapter business shall consist of at least one-half of the active members of the chapter.
 
 \subsection{General Meetings}
-\label{sec:org9b45c0a}
+\label{sec:orgbcfa151}
 
 The purpose of general meetings is to disseminate recent and upcoming events to the membership at large.
 
 \subsection{Regular Meetings}
-\label{sec:org47c615a}
+\label{sec:org6d32a54}
 
 The purpose of regular meetings is to keep those interested in and responsible updated about the day-to-day business of the chapter.
 
 \subsection{Executive Meetings}
-\label{sec:orgeb87de1}
+\label{sec:org6a694e9}
 
 The purpose of executive meetings is to discuss higher-level plans and business of the chapter.
 
 \subsection{Special Meetings}
-\label{sec:orgeb73d3e}
+\label{sec:org917d51c}
 
 The purpose of special meetings is as a designated catch all for discussions that do not fit in the regular schedule of any other meeting.
 \section{Dues, Fees, and Assessments}
-\label{sec:orgede12ba}
+\label{sec:orge27e1bd}
 
 \subsection{National Induction Fee}
-\label{sec:org2e3a76c}
+\label{sec:orgcbda1fb}
 
 The national induction fee shall be determined by the current By-Laws of the Eta Kappa Nu Association.
 
 \subsection{Local Induction Fee}
-\label{sec:org96bad6b}
+\label{sec:org97b806f}
 
 The local induction fee shall be established by the Executive Committee, and shall not exceed the amount of the HKN national induction fee.
 
 \subsection{Waiver}
-\label{sec:orge47d20d}
+\label{sec:orgb38e253}
 
 The Executive Committee may, at their discretion, waive an individual’s local and/or national fees with just cause.
 Such cause is at the sole discretion of the committee. In such cases, the Treasurer shall be instructed to pay the fees from chapter funds.
 \section{Funds}
-\label{sec:orgfd96a12}
+\label{sec:org9093b55}
 
 There shall be a General Fund consisting of local chapter dues, fees, assessments, bank interest, and proceeds collected from other chapter activities.
 The general fund shall be used to pay all operating expenses of the chapter.
 The Treasurer shall establish and administer the General Fund and all accounts.
 The Treasurer shall have the authority to open accounts and to deposit funds.
 \section{ASUC Sponsorship, Funding, and Space}
-\label{sec:orgb391055}
+\label{sec:org26115b8}
 
 This organization hereby wishes to seek ASUC sponsorship.
 This organization adopts and incorporates by reference Schedule A of ASUC Bylaw 2201, and the same as may be amended from time by time, completely and fully as part of this [constitution, charter, articles, etc].
@@ -344,7 +344,7 @@ This organization cannot amend this clause unless and until the ASUC has certifi
 This organization will continue to be bound by any provisions specified in Schedule A for actions it took while this clause was in effect, even if this clause is amended.
 
 \subsection{Schedule A}
-\label{sec:orgb0d4a03}
+\label{sec:orgfbe9a6d}
 
 1 This organization is organized and operated exclusively for nonprofit purposes.
 The property of this organization is irrevocably dedicated to the purposes specified in its primary governing document and no part of the net income or assets of this organization shall ever inure to the benefit of any director, officer, or member thereof or to the benefit of any private person.
@@ -401,10 +401,10 @@ In the event that the designated organization no longer exists or has ceased to 
 14 This organization shall be considered dissolved if it is inactive and (a) fails to register as a student organization with the University for more than five full academic years or (b) it ceases to have any members.
 The ASUC shall have the authority to wind-up the affairs of this organization in such case, but shall not assume any responsibility for any debts or liabilities of this organization.
 \section{Amendments}
-\label{sec:org2369c07}
+\label{sec:orgdd060f4}
 
 \subsection{Ratification}
-\label{sec:org7d9ea41}
+\label{sec:org9ea6ce0}
 
 Amendment of these chapter Constitution must be approved by a unanimous vote of all active members present at regular meetings or by a two-thirds majority vote of all active members present at general meetings.
 The amended Chapter Constitution will become effective upon:
@@ -415,19 +415,19 @@ The amended Chapter Constitution will become effective upon:
 \item Approval by the HKN Executive Council.
 \end{enumerate}
 
-All amendments, additions or deletions to this document must be filed with the LEAD Center in 432 Eshleman Hall.
+All amendments, additions or deletions to this document must be filed with the OASIS Center at \href{mailto:oasis.center@berkeley.edu}{oasis.center@berkeley.edu}, or OASIS Center at 312 Eshleman Hall.
 
 \subsection{Student Activities and Services}
-\label{sec:org9169552}
+\label{sec:org7053bc9}
 
 If this organization is a registered student group with the Student Activities and Services (102 Hearst Gym), no amendment may conflict with University of California regulations pertaining to registered student groups, and the Student Activities and Services must have an up to date copy of this document at all times.
 
 \subsection{Associated Students of the University of California}
-\label{sec:orgd8c4795}
+\label{sec:org53173e4}
 
 If this organization receives sponsorship or funding from the Associated Students of the University of California, no amendment may conflict with Associated Students of the University of California regulations pertaining to sponsored or funded student groups, and the Office of Student Affairs of the Associated Students of the University of California must have an up to date copy of this document at all times.
 \section{Dissolution}
-\label{sec:org8c358f7}
+\label{sec:orgf78121a}
 
 The property of this chapter is irrevocably dedicated to charitable purposes and no part of the net income or assets of this chapter shall ever inure to the benefit of any officer or member thereof or to the benefit of any private person, or any organization not 501(c)(3) qualified by the IRS.
 Upon dissolution of the chapter, any assets remaining after payment, or provision of payment, of all debts and liabilities of the organization shall be returned to Eta Kappa Nu headquarters, which is organized and operated exclusively for charitable purposes and has established its tax exempt status under section 501(c)(3) of the Internal Revenue Code.
